--- a/server/public/css/style.css
+++ b/server/public/css/style.css
@@ -53,6 +53,11 @@ textarea:focus {
 }
 /* ヘッダー 
 -----------------------*/
+header{
+    position: fixed;
+    top: 0;
+    left: 0;
+}
 .header-wrapper {
     margin: 0 auto;
     padding: 0 8%;
@@ -63,7 +68,8 @@ textarea:focus {
     align-items: center;
     height: 100px;
     position: fixed;
-
+    top: 0;
+    left: 0;
 }
 .main-nav {
     display: flex;
